Updated .buttons to live in article > modules and default to right-alignment. Removed mixin and .buttons from _forms.scss as they were no longer needed.

--- a/Website/frontend/assets/css/_sass/partials/_forms.scss
+++ b/Website/frontend/assets/css/_sass/partials/_forms.scss
@@ -364,9 +364,6 @@ form,
 			margin-bottom: 0;
 		}	
 	}
-	.buttons {
-		@include button-bar;
-	}
 	hr.content-divider { 
 		border: none;
 		border-top: 1px solid #ddd;
